# enumify

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: term_generic.rs  term_nested.rs  tests.rs
