[package]
name = "enumify"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust macro that declares an `enum` (and a bunch of `impl From`s) based on a set of `struct`s"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["full"]
